fixed alignment for all items within nav container up to width=>1264px

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -134,6 +134,7 @@ li {
 		order: unset;
 		overflow-y: auto;
 		justify-content: space-between;
+		align-items: center;
 		top: 0;
 	}
 	@media only screen and(600px<=width) {
@@ -143,15 +144,20 @@ li {
 	}
 
 	@media only screen and(688px<=width) {
-		width: auto;
+		width: 88px;
 		flex: 1 1 auto;
 		align-items: end;
+		padding: 0 8px;
 	}
 
 	@media only screen and(988px<=width) {
 		width: 68px;
 		flex: 1 0 auto;
-		//align-items: center;
+		align-items: end;
+		//justify-content: end;
+		overflow-y: hidden;
+		padding:0;
+
 	}
 
 	@media screen and (1008px<=width) {
@@ -185,8 +191,9 @@ li {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		//height: 582px;
+		/* height: 100vh; */
 		margin: 0 0 4px 0;
+		/* border:solid red */
 	}
 	@media only screen and (600px<=width) {
 		box-sizing: border-box;
@@ -196,11 +203,13 @@ li {
 
 	@media only screen and (688px<=width) {
 		padding: 0;
+		width: 72px;
 		/* align-self: flex-end; */
 	}
 
 	@media only screen and(988px<=width) {
 		width: 60px;
+		height: unset;
 		padding: 0 4px;
 		flex: 1 0 auto;
 		box-sizing: content-box;
@@ -404,6 +413,12 @@ button:hover {
 }
 
 .wrappers2 {
+
+	@media screen and (998px<=width) {
+		display: flex;
+		width: 100%;
+		justify-content:center ;
+	}
 	@media screen and (1265px<=width) {
 		display: block;
 		width: 100%;
@@ -432,7 +447,7 @@ button:hover {
 		width: 60px;
 		align-self: center;
 		//aspect-ratio: 1/1;
-		margin: 4px 0;
+		margin: 16px 0px ;
 		padding: 0;
 		box-sizing: border-box;
 		right: initial;
@@ -440,11 +455,18 @@ button:hover {
 	}
 
 	@media screen and (600px<=width) {
+		margin: 16px 0;
 	}
 
 	@media screen and(688px<=width) {
 		width: 88px;
-		margin: 16px 0 0 0;
+		padding: 0;
+		align-self: flex-end;
+		box-sizing: border-box;
+	}
+
+	@media screen and(988px<=width) {
+		width: 88px;
 		padding: 0;
 		align-self: flex-end;
 		box-sizing: border-box;
@@ -519,43 +541,62 @@ button:hover {
 
 	@media only screen and (500px<=width) {
 		display: flex;
-		height: 64px;
+		min-height: 64px;
 		width: 64px;
-		box-sizing: border-box;
+		//box-sizing: border-box;
 		//padding: 4px;
-		padding: 0 0 0 0;
-		margin: 8px 2px 12px -2px;
-		&_image-wrapper {
-			height: 100%;
-			width: 100%;
-			padding: 12px;
-			//justify-self: center;
-			box-sizing: border-box;
-		}
-		img {
-			display: flex;
-			width: 100%;
-			height: 100%;
-			//aspect-ratio: 1/1;
-			border-radius: 50%;
-		}
-
-		span {
-			display: none;
-		}
-
-		&_user-info {
-			display: none;
-		}
-
-		@media screen and(600px<=width) {
-			//margin-top: 156px;
-			margin-left: 8px;
-		}
+		padding: 0;
+		margin: auto 0px 12px 0px;
+		padding-top: 8px;
+		//align-self: center;
 	}
+
 	@media screen and(688px<=width) {
+		width: 72px;
+	}
+
+	@media screen and(988px<=width) {
+		width: 60px;
+		padding:0 4px;
+		//box-sizing: border-box;
+	}
+
+	@media screen and (1008px<=width) {
+		width: 88px;
+		padding: 0 8px;
+		box-sizing: border-box;
+	}
+
+
+	&_image-wrapper {
+		display: flex;
+		height: 100%;
+		width: 100%;
+		padding: 12px;
+		justify-content: center;
+		align-items: center;
+		//justify-self: center;
+		box-sizing: border-box;
+	}
+	img {
+		display: flex;
+		width: 40px;
+		aspect-ratio: 1/1;
+		//aspect-ratio: 1/1;
+		border-radius: 50%;
+	}
+
+	span {
 		display: none;
 	}
+
+	&_user-info {
+		display: none;
+	}
+
+	/* @media screen and(688px<=width) {
+		display: none;
+	} */
 }
 
 #profile-pill:hover {
